# unicef-notification

./: .gitignore  .isort.cfg  .travis.yml  CHANGES  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: test.yml
src/requirements/: install.pip
src/unicef_notification/: __init__.py  admin.py  backends.py  loaders.py  models.py  utils.py  validations.py
src/unicef_notification/management/commands/: update_notifications.py
src/unicef_notification/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  test_backends.py  test_commands.py  test_email.py  test_loaders.py  test_models.py  test_utils.py  test_validations.py
tests/demoproject/demo/: settings.py  urls.py
tests/demoproject/demo/sample/: models.py
tests/demoproject/demo/sample/notifications/: author.py
