[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unicef-notification"
dynamic = ["version"]
description = "Django package that handles sending of notifications"
readme = "README.rst"
license = "Apache 2 License"
authors = [
    { name = "UNICEF", email = "dev@unicef.org" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "django",
    "django-model-utils",
    "django-post-office",
]

[project.optional-dependencies]
test = [
    "black",
    "factory-boy",
    "flake8",
    "isort",
    "psycopg2-binary",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-echo",
]

[project.urls]
Homepage = "https://github.com/unicef/unicef-notification"

[tool.hatch.version]
path = "unicef_notification/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["/src/unicef_notification"]
